--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Edit _config.yml to set your title!
-description: This is where the description of your site will go. You should change it by editing the _config.yml file. It can be as long as you like! Happy blogging... ❤
-github_username: jph00
+title: Ana vs. Machine Learning
+description: A biomedical engineer's (barely) attempt to blog a journey to learn about machine learning and artificial intelligence.  ❤
+github_username: AnaG18
 
 # Email and twitter are optional:
-email:
+email: apaola.005@gmail.com
 twitter_username:
 
 # Set this to true to get LaTeX math equation support
